# lyon

./: .gitignore  README.md  dune-project  lyon.opam
lib/: concretGraphRewritingSystems.ml  dune  graphHomomorphism.ml  graphRewritingSystem.ml  mGraph.ml  termination.ml  unlabelledDirectedMultGraph.ml
lib3/: dune  experiences_complexGraph.ml  graphRewritingSystem.ml  termination.ml
